--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -1,30 +1,8 @@
-.container{
-    background-color: blue;
-    width: fit-content;
-    padding: 1em;
-    border-radius: 10px;
-    box-shadow: 10px 10px 5px 0px rgba(red, green, blue, alpha); 
-    text-shadow: 6px 4px 7px rgba(red, green, blue, alpha);
-    display: flex;
-    flex-direction: column;
-}
-
-    .cLoseButton{
-        border: 0px;
-        background-color: rgba(red, green, blue, alpha);
-        width: fit-content;
-        height: fit-content;
-        border-radius: 15px;
-        transition: 0.5s;
-
-
-        }
-
-
-.cLoseButton:hover{
-box-shadow: 10px 10px 5px 0px rgba(red, green, blue, alpha);    
-}
-    
+.card {
+    border: 1px solid #aee5e2;
+    padding: 1rem;
+    background-color: #151df1;
+  }
 
 
 
